--- a/src/index.html
+++ b/src/index.html
@@ -7,5 +7,6 @@
 <a href="test">test</a>
 
 <input id="button" type="button" value="test">
+<input id="button2" type="button" value="test2">
 
 <script src="main.js"></script>
