--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,14 @@
 
 <h1>Service Worker</h1>
 
+<ol>
+  <li>make your pc/mobile offline</li>
+  <li>click button below</li>
+  <li>make you pc/mobile online</li>
+  <li>you will see the notification</li>
+</ol>
+
+
 <a href="test">test</a>
 
 <input id="button" type="button" value="test">
